--- a/src/main/java/vue/AddParticipant.form
+++ b/src/main/java/vue/AddParticipant.form
@@ -184,7 +184,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <Component id="jPanel4" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -207,8 +207,9 @@
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="insertEventText" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="insertCSV" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                       </Group>
                       <Component id="birthL" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="firstNameL" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -296,6 +297,7 @@
             <Property name="text" type="java.lang.String" value="Form"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="insertEventTextMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="insertEventTextActionPerformed"/>
           </Events>
         </Component>
@@ -306,6 +308,9 @@
           <AccessibilityProperties>
             <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="CSVformat"/>
           </AccessibilityProperties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="insertCSVMouseClicked"/>
+          </Events>
         </Component>
         <Component class="java.awt.Label" name="label1">
           <Properties>
@@ -330,7 +335,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                   <StringArray count="1">
-                    <StringItem index="0" value="No event now!"/>
+                    <StringItem index="0" value="Aucun &#xe9;v&#xe8;nement !"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -404,6 +409,10 @@
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="obsKeyPressed"/>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="obsKeyReleased"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -411,6 +420,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="addMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="cancel">
           <Properties>
